name:                latex-formulae-image
version:             0.1.0.0
synopsis:            A library for rendering LaTeX formulae as images using an actual LaTeX installation
description:         This library provides the basic infrastructure necessary to convert LaTeX formulae into images, using a real
                     LaTeX installation. This is useful in particular for showing formulae on websites, where using alternatives
                     like MathJax is not an option (e.g, when you want to use various LaTeX packages that MathJax doesn't support).
                     .
                     This library requires @latex@, @dvips@ and ImageMagick's @convert@ to be present in the system. It also
                     uses a few tricks to compute where the baseline is in the image, so these images can be effectively typeset inline
                     with other text.
                     .
                     The companion library to this, @latex-formulae-pandoc@, provides useful tools to integrate this library with pandoc,
                     when generating HTML documents.
homepage:            http://github.com/liamoc/latex-formulae#readme
license:             BSD3
license-file:        LICENSE
author:              Liam O'Connor
maintainer:          liamoc@cse.unsw.edu.au
copyright:           Liam O'Connor, 2015
category:            Image
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
source-repository head
  type:     git
  location: https://github.com/liamoc/latex-formulae
flag old-base
  description: if building with older base versions
  default: False

library
  hs-source-dirs:      src
  exposed-modules:     Image.LaTeX.Render
  if flag(old-base)
     build-depends: base >= 4.7 && < 4.8
                  , transformers-compat >= 0.4 && < 0.5
  else
     build-depends: base >= 4.8 && < 4.9
  build-depends:       JuicyPixels >= 3.2 && < 3.3, errors >= 1.4 && < 2.1
                     , temporary >= 1.2 && < 1.3
                     , transformers >= 0.3 && < 0.5
                     , directory >= 1.2 && < 1.3
                     , process >= 1.2 && < 1.3
                     , filepath >= 1.3 && < 1.5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/liamoc/latex-formulae-image
