name:                latex-formulae-pandoc
version:             0.2.0.4
synopsis:            Render LaTeX formulae in pandoc documents to images with an actual LaTeX installation
description:         This library provides utility functions to convert LaTeX equations to images in Pandoc documents using the @latex-formulae-image@ package.
                     It requires an actual LaTeX installation to work (@latex@,@dvips@), along with ImageMagick's @convert@ (which needs to understand PostScript)
                     .
                     An executable is also provided which can be used as a Pandoc filter from the commandline, which allows this technique to be used
                     even for standalone Pandoc jobs.
homepage:            http://github.com/liamoc/latex-formulae#readme
license:             BSD3
license-file:        LICENSE
author:              Liam O'Connor
maintainer:          liamoc@cse.unsw.edu.au
copyright:           Liam O'Connor, 2015
category:            Image
build-type:          Simple
cabal-version:       >=1.10
source-repository head
  type:     git
  location: https://github.com/liamoc/latex-formulae

library
  exposed-modules:     Image.LaTeX.Render.Pandoc
  build-depends:       base >=4.7 && <5
                     , pandoc-types >= 1.12 && < 1.17 
                     , latex-formulae-image >= 0.1 && < 0.2
                     , JuicyPixels >= 3.2 && < 3.3
                     , directory >= 1.2 && < 1.3
                     , filepath >= 1.3 && < 1.5
                     , base64-bytestring >= 1.0 && < 1.1
                     , bytestring >= 0.10 && <0.11
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010

executable latex-formulae-filter
  hs-source-dirs:      filter
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base >=4.7 && <5, latex-formulae-pandoc
                     , pandoc-types >= 1.12 && < 1.17
                     , latex-formulae-image >= 0.1 && < 0.2
  default-language:    Haskell2010
   

  
